<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="24dp">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_back"
        android:tint="@color/white"
        android:contentDescription="@string/back"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/input_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="26sp"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/bg_card_soft"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etBillName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_name_hint"
            android:background="@drawable/bg_input_soft"
            android:padding="12dp"
            android:inputType="textPersonName"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_hint"
            android:background="@drawable/bg_input_soft"
            android:padding="12dp"
            android:inputType="number"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_bill"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="44dp"/>


    <TextView
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="14dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
