<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="22dp">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_back"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_language_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/rgLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbIndonesia"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_pill"
            android:button="@drawable/radio_selector"
            android:buttonTint="@null"
            android:paddingLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/lang_indonesia"
            android:textColor="@color/text_dark"
            android:textSize="15sp"
            android:fontFamily="serif"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_pill"
            android:button="@drawable/radio_selector"
            android:buttonTint="@null"
            android:paddingLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/lang_english"
            android:textColor="@color/text_dark"
            android:textSize="15sp"
            android:fontFamily="serif"/>
    </RadioGroup>

    <TextView
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="14dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
