<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="22dp">

    <!-- Back -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_back"
        android:tint="@color/white"
        android:contentDescription="@string/back"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->

    <!-- Spinner Country -->

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/location_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spCountry"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_dropdown"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Detect -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnDetect"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_dropdown"
        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintTop_toBottomOf="@id/spCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvDetect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/auto_detect_location"
            android:textColor="#2B1E1E"
            android:textSize="14sp"
            android:fontFamily="serif"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivDetectIcon" />

        <ImageView
            android:id="@+id/ivDetectIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@android:drawable/ic_menu_mylocation"
            android:tint="#2B1E1E"
            android:contentDescription="@string/auto_detect_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Next -->
    <TextView
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:includeFontPadding="false"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
